--- a/css/app.css
+++ b/css/app.css
@@ -69,3 +69,65 @@
 }
 
 /*  career section end */
+
+
+.portfolio-item {
+  cursor: pointer;
+  margin-bottom: 1.8rem;
+}
+.modal-dialog {
+  max-width: 80%;
+}
+
+
+/*tabs section */
+.tabs {
+  overflow: hidden;
+}
+.tabs .nav-tabs {
+  border: 0;
+}
+
+#tabs .nav-link {
+  border: 0;
+  padding: 12px 5px 12px 0;
+  transition: 0.3s;
+  color: var(--default-color);
+  border-radius: 0;
+  border-right: 2px solid color-mix(in srgb,var(--default-color),transparent 90%) ;
+  font-weight: 600;
+  font-size: 15px;
+
+}
+#tabs .nav-link:hover {
+  color: var(--accent-color);
+}
+#tabs .nav-link.active {
+  color: var(--accent-color);
+  border-color: var(--accent-color);
+  background-color: var(--background-color);
+}
+
+#tabs .details h3 {
+  font-size: 50px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+#tabs .details p {
+  color: color-mix(in srgb,var(--default-color), transparent 20%);
+}
+
+#tabs .details p:last-child {
+  margin-bottom: 0;
+}
+
+@media (max-width : 992px) {
+  #tabs .nav-link {
+    border: 0;
+    padding: 15px;
+  }
+  #tabs .nav-link.active {
+    color: var(--background-color);
+    background: var(--accent-color);
+  }
+}
